Improvements to navbar for separators and selected page/tab.

--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -62,13 +62,13 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/blogs">
+                        <a href="/blogs" {% if page.selected == 'blogs' %} class="selected" {% endif %}>
                             <span class="icon-books"></span>
                             Blogs
                         </a>
                     </li>
                     <li>
-                        <a href="/contact">
+                        <a href="/contact" {% if page.selected == 'contact' %} class="selected" {% endif %}>
                             <span class="icon-phone"></span>
                             Contact
                         </a>
