Progress save of projects. Needs redoing.

--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -46,7 +46,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <a href="/projects">
+                        <a href="/projects" {% if page.selected == 'projects' %} class="selected" {% endif %}>
                             <span class="icon-lab"></span>
                             Projects
                         </a>
