Code highlighter working, progress on nandos post.

--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -7,6 +7,7 @@
         </title>
         <meta name="description" content="Personal blog, projects and things by limpygnome. Hack the planet.">
         {% css layout %}
+        {% css syntax %}
         {% css icomoon/style %}
         {% css timeline/style %}
         {% js music/music-player %}
