--- a/website/assets/layout.css
+++ b/website/assets/layout.css
@@ -126,13 +126,14 @@ nav ul a span
 
 nav ul a span
 {
-    color: #ccc;
+    color: #999;
 }
 
 nav ul a:hover span,
-nav ul a:focus span
+nav ul a:focus span,
+nav ul a.selected span
 {
-    color: #FFF;
+    color: #fff;
 }
 
 
@@ -191,6 +192,7 @@ nav ul:nth-child(4) a.selected
 main
 {
     flex: 1;
+    overflow-x: hidden;
 }
 
 
@@ -374,6 +376,8 @@ main .button:focus
 
 main img
 {
+    display: block;
+    margin: auto;
     max-width: 60%;
     max-height: 40%;
 }
@@ -448,7 +452,11 @@ main article time
 
 #projects li
 {
-    padding-bottom: 1em;
+    display: inline-block;
+    vertical-align: top;
+    width: 49%;
+    margin: 0;
+    padding: 0em 0em 1em 0em;
 }
 
 #projects img
@@ -459,4 +467,12 @@ main article time
     border: none;
     vertical-align: middle;
     margin: 0em 1em 0em 0em;
+}
+
+@media only screen and (max-width: 768px)
+{
+    #projects li
+    {
+        width: 100%;
+    }
 }
