--- a/website/assets/layout.css
+++ b/website/assets/layout.css
@@ -80,6 +80,7 @@ body > header p a
 .wrapper
 {
     display: flex;
+    width: 100%;
 }
 
 
@@ -90,7 +91,7 @@ body > header p a
 nav
 {
     width: 13em;
-    margin: 0.5em 2em 0.5em 1em;
+    margin: 0.5em 0.5em 0.5em 1em;
     padding: 0.5em;
 }
 
@@ -193,6 +194,7 @@ main
 {
     flex: 1;
     overflow-x: hidden;
+    padding: 0em 1em;
 }
 
 
@@ -336,7 +338,8 @@ main a:focus
     color: #315923;
 }
 
-main p.center
+main p.center,
+main div.center
 {
     text-align: center;
 }
@@ -380,6 +383,15 @@ main img
     margin: auto;
     max-width: 60%;
     max-height: 40%;
+}
+
+@media only screen and (max-width: 768px)
+{
+    main > h1,
+    main > article > header > h1
+    {
+        margin-top: 0;
+    }
 }
 
 
@@ -428,6 +440,7 @@ main article time
     .wrapper
     {
         display: block;
+        width: auto;
         padding: 0.5em;
     }
 
