Just need to finish picture for train piggy, few articles and fix music player.

--- a/website/_includes/music-player.html
+++ b/website/_includes/music-player.html
@@ -1,4 +1,6 @@
-<div class="music_player" id="">
+---
+---
+<div class="music_player" id="{{ playerid }}">
     <audio controls>
         <source src="" type="audio/mpeg">
         <p>Your browser does not support HTML5 audio.</p>
