--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -13,6 +13,7 @@ layout: compress
         {% css_asset_tag bundle %}
         - /_assets/layout.css
         - /_assets/timeline.css
+        - /_assets/music-player.css
         - /_assets/icomoon/style.css
 
         - /_assets/syntaxhighlighter/styles/shCore.css
