--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -9,6 +9,7 @@ layout: compress
             {{ page.title }} - limpygnome.com
         </title>
         <meta name="description" content="Personal blog, projects and things by limpygnome. Hack the planet.">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         {% css_asset_tag bundle %}
         - /_assets/layout.css
