--- a/website/_assets/syntaxhighlighter/styles/shCoreEclipse.css
+++ b/website/_assets/syntaxhighlighter/styles/shCoreEclipse.css
@@ -311,7 +311,7 @@
 .syntaxhighlighter .script {
   font-weight: bold !important;
   color: #7f0055 !important;
-  background-color: none !important;
+  background: none !important;
 }
 .syntaxhighlighter .color1, .syntaxhighlighter .color1 a {
   color: gray !important;
