--- a/website/_assets/syntaxhighlighter/styles/shCoreMDUltra.css
+++ b/website/_assets/syntaxhighlighter/styles/shCoreMDUltra.css
@@ -311,7 +311,7 @@
 .syntaxhighlighter .script {
   font-weight: bold !important;
   color: #aaaaff !important;
-  background-color: none !important;
+  background: none !important;
 }
 .syntaxhighlighter .color1, .syntaxhighlighter .color1 a {
   color: red !important;
