--- a/website/_assets/syntaxhighlighter/styles/shThemeFadeToGrey.css
+++ b/website/_assets/syntaxhighlighter/styles/shThemeFadeToGrey.css
@@ -100,7 +100,7 @@
 .syntaxhighlighter .script {
   font-weight: bold !important;
   color: #d01d33 !important;
-  background-color: none !important;
+  background: none !important;
 }
 .syntaxhighlighter .color1, .syntaxhighlighter .color1 a {
   color: #ffc074 !important;
