--- a/website/_assets/syntaxhighlighter/styles/shThemeMidnight.css
+++ b/website/_assets/syntaxhighlighter/styles/shThemeMidnight.css
@@ -100,7 +100,7 @@
 .syntaxhighlighter .script {
   font-weight: bold !important;
   color: #b43d3d !important;
-  background-color: none !important;
+  background: none !important;
 }
 .syntaxhighlighter .color1, .syntaxhighlighter .color1 a {
   color: #f8bb00 !important;
