--- a/website/_assets/syntaxhighlighter/styles/shCoreRDark.css
+++ b/website/_assets/syntaxhighlighter/styles/shCoreRDark.css
@@ -311,7 +311,7 @@
 .syntaxhighlighter .script {
   font-weight: bold !important;
   color: #5ba1cf !important;
-  background-color: none !important;
+  background: none !important;
 }
 .syntaxhighlighter .color1, .syntaxhighlighter .color1 a {
   color: #e0e8ff !important;
