--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -37,18 +37,20 @@ layout: compress
     </head>
     <body>
 
-        <header>
-            <h1>
-                <a href="/">
-                    limpygnome
-                </a>
-            </h1>
-            <p>
-                <a href="https://www.youtube.com/watch?v=Cipc8EowshY">
-                    hack the planet.
-                </a>
-            </p>
-        </header>
+        <div class="wrapper-header">
+            <header>
+                <h1>
+                    <a href="/">
+                        limpygnome
+                    </a>
+                </h1>
+                <p>
+                    <a href="https://www.youtube.com/watch?v=Cipc8EowshY">
+                        hack the planet.
+                    </a>
+                </p>
+            </header>
+        </div>
 
         <div class="wrapper">
             <nav>
