--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -37,6 +37,10 @@ layout: compress
     </head>
     <body>
 
+        <a id="skip-to-content" href="#main">
+            Skip to main content
+        </a>
+
         <div class="wrapper-header">
             <header>
                 <h1>
@@ -112,7 +116,7 @@ layout: compress
                 </ul>
             </nav>
 
-            <main>
+            <main id="main">
                 {{ content }}
             </main>
         </div>
