Moving public files URL to HTTP (for now).

--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -108,7 +108,7 @@ layout: compress
                 </ul>
                 <ul>
                     <li>
-                        <a href="https://public.limpygnome.com">
+                        <a href="http://public.limpygnome.com">
                             <span class="icon-folder-open"></span>
                             Public Files
                         </a>
