--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -34,6 +34,8 @@ layout: compress
         - /_assets/music-player.js
         {% endjavascript_asset_tag %}
 
+        {% include google-analytics.html %}
+
     </head>
     <body>
 
