--- a/website/_layouts/page.html
+++ b/website/_layouts/page.html
@@ -4,9 +4,11 @@ layout: default
 
 <section {% if page.sectionid != null %} id="{{ page.sectionid }}" {% endif %}>
 
+{% if page.hideHeader == null %}
     <h2>
         {{ page.title }}
     </h2>
+{% endif %}
 
     {{ content }}
 
