--- a/website/_assets/layout.css
+++ b/website/_assets/layout.css
@@ -15,6 +15,7 @@ html, body
 {
     margin: 0;
     padding: 0;
+    background: #222;
 }
 
 body
@@ -243,6 +244,7 @@ main
 {
     overflow-x: hidden;
     padding: 0em 1em;
+    background: #fff;
 }
 
 
