--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -91,7 +91,7 @@ layout: compress
                     </li>
                     <li>
                         <a href="/music" {% if page.selected == 'music' %} class="selected" {% endif %}>
-                            <span class="icon-music"></span>
+                            <span class="icon-headphones"></span>
                             Music
                         </a>
                     </li>
