--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -144,17 +144,20 @@ layout: compress
             <a title="Github" href="https://www.github.com/limpygnome">
                 Github
             </a>
-            <a title="YouTube" href="https://www.youtube.com/user/limpygnome">
-                YouTube
-            </a>
-            <a title="SoundCloud" href="https://www.soundcloud.com/limpygnome">
-                SoundCloud
+            <a title="Instagram" href="https://www.instagram.com/limpygnome">
+                Instagram
             </a>
             <a title="LinkedIn" href="http://www.linkedin.com/in/marcuscraske">
                 LinkedIn
             </a>
             <a title="Strava" href="https://www.strava.com/athletes/limpygnome">
                 Strava
+            </a>
+            <a title="YouTube" href="https://www.youtube.com/user/limpygnome">
+                YouTube
+            </a>
+            <a title="SoundCloud" href="https://www.soundcloud.com/limpygnome">
+                SoundCloud
             </a>
             <a title="E-mail" href="mailto:limpygnome@gmail.com" target="_blank">
                 E-mail
