Minor layout structure fixes, fix for ansible build of jekyll.

--- a/website/_assets/layout.css
+++ b/website/_assets/layout.css
@@ -53,6 +53,11 @@ Got to wait until CSS 4...
     max-height: 8em;
 }
 
+.sr-only
+{
+    display: none;
+}
+
 
 /*
     Skip to main content (accessibility)
