--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -22,7 +22,7 @@ layout: compress
         - /_assets/icomoon/style.css
 
         - /_assets/syntaxhighlighter/styles/shCore.css
-        - /_assets/syntaxhighlighter/styles/shThemeDefault.css
+        - /_assets/syntaxhighlighter/styles/shThemeRDark.css
         {% endcss_asset_tag %}
 
         {% javascript_asset_tag bundle %}
@@ -68,7 +68,7 @@ layout: compress
                     <li>
                         <a href="/">
                             <span class="icon-home"></span>
-                            Home
+                            Blog
                         </a>
                     </li>
                 </ul>
