--- a/website/_layouts/post.html
+++ b/website/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
     <header>
 
         <h2>
-            {{ page.title }}
+            <span class="icon icon-arrow"></span> {{ page.title }}
         </h2>
 
         {% if page.date != null %}
